<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".ui.features.additem.AddItem">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@drawable/gradientcolor"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:titleTextColor="#FFFFFF">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Adicionar Item"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="15dp" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:srcCompat="@drawable/arrow_back_24" />

  </androidx.appcompat.widget.Toolbar>



  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textViewIO"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Entrada/Saída:"
          android:textStyle="bold"
          android:textSize="22sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/toolbar" />
      <TextView
          android:id="@+id/textViewFlowEdit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="3dp"
          android:text=" "
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="parent" />

      <Spinner
          android:id="@+id/spinnerIO"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="45dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textViewIO" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Descrição:"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinnerIO" />

      <EditText
          android:id="@+id/DescId"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          android:autofillHints="username"
          android:background="@drawable/background_layout"
          android:gravity="center"
          android:hint="Descrição..."
          android:inputType="textCapSentences"
          android:maxLength="120"
          android:padding="10dp"
          android:textColor="@color/black"
          android:textSize="15sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView5" />

      <TextView
          android:id="@+id/textViewPay"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Método de Pagamento:"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/DescId" />

      <Spinner
          android:id="@+id/spinnerPayment"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView6" />

      <TextView
          android:id="@+id/textViewValor"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Valor:"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinnerPayment" />

      <EditText
          android:id="@+id/editValue"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          android:background="@drawable/background_layout"
          android:digits="0123456789,."
          android:ems="10"
          android:gravity="center"
          android:maxLength="14"
          android:hint="Ex: 1500,00"
          android:inputType="text"
          android:paddingLeft="16dp"
          android:textSize="15sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView7" />

      <TextView
          android:id="@+id/textViewCategory"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Categoria:"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>

      <Spinner
          android:id="@+id/spinnerCategory"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <TextView
          android:id="@+id/textViewDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Clique para adicionar uma data"
          android:textSize="15sp"
          android:textStyle="italic"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editValue" />

      <TextView
          android:id="@+id/textDateSelected"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:gravity="center"
          android:text="--/--/----"
          android:textSize="17dp"
          android:textStyle="bold|italic" />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="Observação:"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spinnerMonth" />

      <EditText
          android:id="@+id/ObsId"
          android:layout_width="match_parent"
          android:layout_height="96dp"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          android:layout_marginBottom="10dp"
          android:autofillHints="name"
          android:background="@drawable/background_layout"
          android:gravity="center"
          android:padding="14dp"
          android:maxLength="650"
          android:hint="Digite uma observação..."
          android:inputType="text|textMultiLine"
          android:textColor="@color/black"
          android:textSize="15sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView9" />

      <Button
          android:id="@+id/saveNote"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:layout_alignParentBottom="true"
          android:layout_marginStart="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="45dp"
          android:backgroundTint="#0095FE"
          android:text="ADICIONAR"
          android:textSize="13sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ObsId" />

      <Button
          android:id="@+id/buttonCancel"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:layout_alignParentBottom="true"
          android:layout_marginStart="45dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="45dp"
          android:backgroundTint="#950101"
          android:text="CANCELAR"
          android:textSize="13sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ObsId"
          android:visibility="invisible"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp" />


    </LinearLayout>
    </ScrollView>

</LinearLayout>





