...
                    android:title="Alimentação" />

                <item
                    android:id="@+id/nav_healthF"
                    android:icon="@drawable/baseline_health"
                    android:padding="10dp"
                    android:title="Saúde" />

                <item
                    android:id="@+id/nav_transportF"
                    android:icon="@drawable/baseline_transport"
                    android:padding="10dp"
                    android:title="Transporte" />
...
